# swagger/swagger.yml
@@ -11,48 +11,6 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /application/{bsKey}/{itemKey}:
-    get:
-      tags:
-      - application
-      description: get user by uid
-      operationId: ApplicationController.Get
-      parameters:
-      - in: path
-        name: bsKey
-        description: The key for staticblock
-        required: true
-        type: string
-      - in: path
-        name: itemKey
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Application'
-        "403":
-          description: :bsKey is empty
-  /application/application:
-    post:
-      tags:
-      - application
-      description: create users
-      operationId: ApplicationController.Create App
-      parameters:
-      - in: body
-        name: body
-        description: body for Application content
-        required: true
-        schema:
-          $ref: '#/definitions/models.OauthClient'
-      responses:
-        "200":
-          description: '{string}'
-        "403":
-          description: body is empty
   /authorize/:
     post:
       tags:
@@ -102,6 +60,43 @@ paths:
         schema:
           $ref: '#/definitions/path'
         default: string
+      responses:
+        "200":
+          description: '{string}'
+        "403":
+          description: body is empty
+  /client/{clientID}:
+    get:
+      tags:
+      - client
+      description: get user by uid
+      operationId: ClientController.Get
+      parameters:
+      - in: path
+        name: clientID
+        description: The key for client(clientId)
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Application'
+        "403":
+          description: :client is empty
+  /client/putClient:
+    post:
+      tags:
+      - client
+      description: create client app
+      operationId: ClientController.Create App
+      parameters:
+      - in: body
+        name: clientId
+        description: clientId
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.ClientDto'
       responses:
         "200":
           description: '{string}'
@@ -237,6 +232,16 @@ paths:
         "200":
           description: '{string} logout success'
 definitions:
+  controllers.ClientDto:
+    title: ClientDto
+    type: object
+    properties:
+      Key:
+        type: string
+      RedirectURI:
+        type: string
+      Secret:
+        type: string
   models.Application:
     title: Application
     type: object
@@ -255,42 +260,6 @@ definitions:
         type: string
       ImageURL:
         type: string
-  models.MyGormModel:
-    title: MyGormModel
-    type: object
-    properties:
-      CreatedAt:
-        type: string
-        format: datetime
-      DeletedAt:
-        type: string
-        format: datetime
-      ID:
-        type: string
-      UpdatedAt:
-        type: string
-        format: datetime
-  models.OauthClient:
-    title: OauthClient
-    type: object
-    properties:
-      CreatedAt:
-        type: string
-        format: datetime
-      DeletedAt:
-        type: string
-        format: datetime
-      ID:
-        type: string
-      Key:
-        type: string
-      RedirectURI:
-        $ref: '#/definitions/sql.NullString'
-      Secret:
-        type: string
-      UpdatedAt:
-        type: string
-        format: datetime
   models.Object:
     title: Object
     type: object
@@ -330,11 +299,8 @@ definitions:
   path:
     title: path
     type: object
-  sql.NullString:
-    title: NullString
-    type: object
 tags:
-- name: application
+- name: client
   description: |
     Operations about Users
 - name: user
